changed width bug -- not resizing properly on smaller screens

--- a/assets/themes/bootstrap-3/css/style.css
+++ b/assets/themes/bootstrap-3/css/style.css
@@ -19,6 +19,7 @@ h1, h2, h3, h4 {
 }
 
 .container {
+  width:100%;
   max-width:900px;
 }
 
